[gd_scene load_steps=2 format=3 uid="uid://g74wtsii2osk"]

[ext_resource type="Script" path="res://env.gd" id="1_1xurp"]

[node name="Env" type="Node2D"]
script = ExtResource("1_1xurp")

[node name="WorldBoundary" type="Polygon2D" parent="."]
color = Color(1, 1, 1, 0.231373)

[node name="SnakeSpawnTimer" type="Timer" parent="."]

[connection signal="timeout" from="SnakeSpawnTimer" to="." method="_on_snake_spawn_timer_timeout"]
